2009-07-14  Per Bothner  <per@bothner.com>

	* LitTable.java (emit): For Values instances, we want to use the
	constructor, rather than "make" as the latter's return type is Object.
	Also, don't call readResolve for Values instances.

2009-07-08  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (checkCurrent): Fix thinko for case when
	moduleClass is null and className is non-null - before we used a
	stale value of hasClass.

2009-07-07  Per Bothner  <per@bothner.com>

	Fix for Savannah bug #24249 "Local define miscompiled".
	* LambdaExp.java (compileEnd): No longer do generateApplyMethods
	in compileEnd, because of generateBytecode change.
	(compileAsMethod): Update to explicitly call generateApplyMethods.
	* ApplyExp.java (compile): Likewise.
	* ClassExp.java (compileMembers): Likewise.
	* Compilation.java (generateBytecode): Call compileEnd right after
	compileBody, so that to child function bodies are compiled before
	we do dumpInitializers.  However, generateApplyMethods has to be done
	later, which is why it was moved out of compileEnd.

	* LambdaExp.java (compileEnd): Call single-argument version of
	generateConstructor.

2009-07-05  Per Bothner  <per@bothner.com>

	Fix Savannah bug #26940 "Compiler stuck in endless loop".
	* FindTailCalls.java (walkApplyExp):  Don't set inlineHome
	from tailCallers.
	* FindCapturedVars.java (checkInlineable): Instead set it here.
	* ScopeExp.java (nestedIn): New method.

2009-06-28  Per Bothner  <per@bothner.com>
	    Helmut Eller  <eller.helmut@gmail.com>

	Compile to tail-calls and do inlining more widely.
	* LambdaExp.java (tailCallers): New field.
	(returnContinuation): Generalize - need not be an ApplyExp.
	* FindTailCalls.java (returnContinuation): New state variable.
	(inTailContext): Replace field by method using returnContinuation.
	(walkApplyExp): We now allow inlining a function with multiple calls
	and multiple mutually recusive functions if they have the same (static)
	continuation.