@@ -1,3 +1,8 @@
+2009-07-14  Helmut Eller  <eller.helmut@gmail.com>
+	    Per Bothner  <per@bothner.com>
+
+	* misc-test.scm: New test based on Savannah bug #27014 "AND vs. VOID".
+
 2009-07-11  Helmut Eller  <eller.helmut@gmail.com>
 	    Per Bothner  <per@bothner.com>
 
